add deinitialize() to Interactor

--- a/Code/Interactor/interactor_input.swift.liquid
+++ b/Code/Interactor/interactor_input.swift.liquid
@@ -4,4 +4,5 @@ import Foundation
 
 protocol {{ prefix }}{{ module_info.name }}InteractorInput: class {
     {% if custom_parameters.extended_configure %}func configure(with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig){% else %}func configure(){% endif %}
+    func deinitialize()
 }
