--- a/Code/Presenter/presenter.mcflurry.cachetracker.swift.liquid
+++ b/Code/Presenter/presenter.mcflurry.cachetracker.swift.liquid
@@ -28,9 +28,7 @@ class {{ prefix }}{{ module_info.name }}Presenter: NSObject, RamblerViperModuleI
 
     func willDeinit() {
         if state == .ready {
-            if interactor.isDeliveringModelsListChanges() {
-                interactor.stopDeliveringModelsListChanges()
-            }
+            interactor.deinitialize()
             // TODO: Place your code here
         }
         state = .deinitialized
