--- a/Code/Interactor/interactor.cachetracker.swift.liquid
+++ b/Code/Interactor/interactor.cachetracker.swift.liquid
@@ -25,6 +25,13 @@ class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.n
         // TODO
     }{% endif %}
 
+    func deinitialize() {
+        if isDeliveringModelsListChanges() {
+            stopDeliveringModelsListChanges()
+        }
+        // TODO: Place your code here
+    }
+
     func isDeliveringModelsListChanges() -> Bool {
         return cacheTracker != nil
     }
