--- a/Code/Interactor/interactor.swift.liquid
+++ b/Code/Interactor/interactor.swift.liquid
@@ -20,6 +20,10 @@ class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.n
         // TODO
     }{% endif %}
 
+    func deinitialize() {
+        // TODO: Place your code here
+    }
+
     // MARK: - Helpers
     // TODO: Place your code here
 }
