--- a/Code/Configurator/configurator.swiftui.swift.liquid
+++ b/Code/Configurator/configurator.swiftui.swift.liquid
@@ -48,7 +48,8 @@ class {{ prefix }}{{ module_info.name }}ModuleConfigurator: {% if custom_paramet
     }
 
     func create({% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig{% endif %}) -> UIViewController {
-        let viewController = {{ prefix }}{{ module_info.name }}ViewController()
+        let viewController = {{ prefix }}{{ module_info.name }}ViewController(rootView: {{ prefix }}{{ module_info.name }}RootView())
+        viewController.rootView.delegate = viewController
         {% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}
         configureModuleForViewInput(viewInput: viewController, with: config)
         {% else %}
