--- a/Code/Router/router.mcflurry.alert.swift.liquid
+++ b/Code/Router/router.mcflurry.alert.swift.liquid
@@ -1,13 +1,13 @@
 {% include 'header' %}
 
-import ViperMcFlurryX
+import {% if custom_parameters.mcflurry_swift %}ViperMcFlurryX_Swift{% else %}ViperMcFlurryX{% endif %}
 
 class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info.name }}RouterInput {
 
     // MARK: - VIPER Vars
 
-    weak var calleeOutput: (RamblerViperModuleOutput /* Add supported protocols here, e.g: & AnotherModuleOutput */)!
-    weak var transitionHandler: RamblerViperModuleTransitionHandlerProtocol!
+    weak var calleeOutput: ({% if custom_parameters.mcflurry_swift != "true" %}Rambler{% endif %}ViperModuleOutput /* Add supported protocols here, e.g: & AnotherModuleOutput */)!
+    weak var transitionHandler: {% if custom_parameters.mcflurry_swift != "true" %}Rambler{% endif %}ViperModuleTransitionHandler{% if custom_parameters.mcflurry_swift != "true" %}Protocol{% endif %}!
 
     // MARK: - Vars
     // TODO: Place your code here
@@ -15,7 +15,7 @@ class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info.name 
     // MARK: - {{ prefix }}{{ module_info.name }}RouterInput
 
     func dismiss(_ completion: @escaping (() -> Void)) {
-        transitionHandler.closeCurrentModule!(true) {
+        transitionHandler.closeCurrentModule{% if custom_parameters.mcflurry_swift != "true" %}!{% endif %}(true) {
             completion()
         }
     }
