--- a/Code/View/view_controller.embed.swift.liquid
+++ b/Code/View/view_controller.embed.swift.liquid
@@ -3,7 +3,7 @@
 import UIKit
 import RamblerSegues
 
-class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, RamblerEmbedSegueViewContainer, {{ prefix }}{{module_info.name}}ViewInput {
+class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, {% if custom_parameters.mcflurry_swift != "true" %}Rambler{% endif %}EmbedSegueViewContainer, {{ prefix }}{{module_info.name}}ViewInput {
 
     // MARK: - VIPER Vars
 
