--- a/Code/Presenter/presenter.mcflurry.swift.liquid
+++ b/Code/Presenter/presenter.mcflurry.swift.liquid
@@ -5,7 +5,7 @@ import {% if custom_parameters.mcflurry_swift %}ViperMcFlurryX_Swift{% else %}Vi
 
 fileprivate enum {{ prefix }}{{ module_info.name }}PresenterState {
     case initial
-    case ready
+    case ready(isViewReady: Bool)
     case deinitialized
 }
 
@@ -26,7 +26,7 @@ class {{ prefix }}{{ module_info.name }}Presenter: {% if custom_parameters.mcflu
     // MARK: - Life cycle
 
     func willDeinit() {
-        if state == .ready {
+        if case .ready = state {
             interactor.deinitialize()
             // TODO: Place your code here
         }
@@ -42,15 +42,25 @@ class {{ prefix }}{{ module_info.name }}Presenter: {% if custom_parameters.mcflu
     // MARK: - {{ prefix }}{{module_info.name}}ViewOutput
 
     func viewIsReady() {
-        assert(state == .ready)
+        switch state {
+        case let .ready(isViewReady):
+            assert(!isViewReady)
+            state = .ready(isViewReady: true)
+        default:
+            fatalError()
+        }
         // TODO: Place your code here
     }
 
     // MARK: - {{ prefix }}{{module_info.name}}ModuleInput
 
     {% if custom_parameters.extended_configure %}func configure(with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig) {% else %}func configure() {% endif %}{
-        assert(state == .initial)
-        state = .ready
+        switch state {
+        case .initial:
+            state = .ready(isViewReady: false)
+        default:
+            fatalError()
+        }
         {% if custom_parameters.extended_configure %}
         self.config = config
         interactor.configure(with: config)
