--- a/Code/Presenter/presenter.mcflurry.cachetracker.swift.liquid
+++ b/Code/Presenter/presenter.mcflurry.cachetracker.swift.liquid
@@ -4,7 +4,7 @@ import Foundation
 import {% if custom_parameters.mcflurry_swift %}ViperMcFlurryX_Swift{% else %}ViperMcFlurryX{% endif %}
 import CacheTracker
 
-fileprivate enum {{ prefix }}{{ module_info.name }}PresenterState {
+fileprivate enum {{ prefix }}{{ module_info.name }}PresenterState: Equatable {
     case initial
     case ready(isViewReady: Bool)
     case deinitialized
