--- a/Code/Presenter/presenter.swift.liquid
+++ b/Code/Presenter/presenter.swift.liquid
@@ -2,7 +2,7 @@
 
 import Foundation
 
-fileprivate enum {{ prefix }}{{ module_info.name }}PresenterState {
+fileprivate enum {{ prefix }}{{ module_info.name }}PresenterState: Equatable {
     case initial
     case ready(isViewReady: Bool)
     case deinitialized
