--- a/Code/View/view_controller.embed.swift.liquid
+++ b/Code/View/view_controller.embed.swift.liquid
@@ -1,9 +1,9 @@
 {% include 'header' %}
 
 import UIKit
-import RamblerSegues
+import {% if custom_parameters.mcflurry_swift == 'true' %}ViperMcFlurryX_Swift{% else %}RamblerSegues{% endif %}
 
-class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, {% if custom_parameters.mcflurry_swift != "true" %}Rambler{% endif %}EmbedSegueViewContainer, {{ prefix }}{{module_info.name}}ViewInput {
+class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, {% if custom_parameters.mcflurry_swift == "true" %}EmbedSegueContainerViewProvider{% else %}RamblerEmbedSegueViewContainer{% endif %}, {{ prefix }}{{module_info.name}}ViewInput {
 
     // MARK: - VIPER Vars
 
@@ -31,10 +31,10 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, {% if 
     // MARK: - UI Actions
     // TODO: Place your code here
 
-    // MARK: - RamblerEmbedSegueViewContainer
+    // MARK: - {% if custom_parameters.mcflurry_swift == "true" %}EmbedSegueContainerViewProvider{% else %}RamblerEmbedSegueViewContainer{% endif %}
 
-    func view(forEmbedIdentifier embedIdentifier: String!) -> UIView! {
-        switch embedIdentifier {
+    {% if custom_parameters.mcflurry_swift == 'true' %}func containerViewForSegue(_ identifier: String) -> UIView?{% else %}func view(forEmbedIdentifier identifier: String!) -> UIView!{% endif %} {
+        switch identifier {
         // see https://github.com/rambler-digital-solutions/RamblerSegues
         case "EmbedSomeModuleSegue":
             return self.embedSomeModuleSegueContainer
