--- a/Code/Service/onewaysynchronizer_impl.swift.liquid
+++ b/Code/Service/onewaysynchronizer_impl.swift.liquid
@@ -28,7 +28,7 @@ class {{ prefix }}{{ module_info.name }}ServiceImpl: ViperService, {{ prefix }}{
         return nil
     }
 
-    func boot(launchOptions: [UIApplication.LaunchOptionsKey: Any]?, completion: @escaping ViperServiceBootCompletion) {
+    func boot(launchOptions: ViperServicesLaunchOptions?, completion: @escaping ViperServiceBootCompletion) {
 
         synchronizer = OneWaySynchronizer(processor: self)
         synchronizer.concurrency = 1 // TODO Set value
