--- a/Code/Interactor/interactor.cachetracker.swift.liquid
+++ b/Code/Interactor/interactor.cachetracker.swift.liquid
@@ -57,6 +57,11 @@ class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.n
         return cacheTracker?.transactionsForCurrentState() ?? [CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEntityModel>]()
     }
 
+    //func loadImage(for model: {{ prefix }}{{ module_info.name }}ModuleEntityModel, completion: @escaping ((_ image: UIImage?) -> Void)) { 
+    //    // TODO: Place your code here
+    //    DispatchQueue.main.async { completion(nil) }
+    //}
+
     // MARK: - CacheTrackerDelegate
 
     func cacheTrackerShouldMakeInitialReload() {
