--- a/Code/Interactor/interactor_input.cachetracker.swift.liquid
+++ b/Code/Interactor/interactor_input.cachetracker.swift.liquid
@@ -11,5 +11,5 @@ protocol {{ prefix }}{{ module_info.name }}InteractorInput: class {
     func startDeliveringModelsListChanges()
     func stopDeliveringModelsListChanges()
     func initialStateOfModelsList() -> [CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEntityModel>]
-
+    //func loadImage(for model: {{ prefix }}{{ module_info.name }}ModuleEntityModel, completion: @escaping ((_ image: UIImage?) -> Void))
 }
