--- a/Code/View/view_controller.complex.tableview.cachetracker.swift.liquid
+++ b/Code/View/view_controller.complex.tableview.cachetracker.swift.liquid
@@ -17,11 +17,13 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITabl
     // MARK: - Vars
 
     private final let consumer: CacheTrackerPlainRecurrentConsumer<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel> = CacheTrackerPlainRecurrentConsumer<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel>()
+    private final var context: {{ prefix }}{{ module_info.name }}ViewCellContext!
 
     // MARK: - Life cycle
 
     override func viewDidLoad() {
         super.viewDidLoad()
+        setupContext()
         setupTableView()
         setupConsumer()
         output.viewIsReady()
@@ -56,7 +58,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITabl
     func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
         let cell = tableView.dequeueReusableCell(withIdentifier: "Default") as! {{ prefix }}{{ module_info.name }}ViewCell
         let item = consumer.object(at: indexPath.row)
-        cell.configure(with: item.model)
+        cell.configure(with: item.model, in: context)
         return cell
     }
 
@@ -79,6 +81,19 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITabl
     }
 
     // MARK: - Helpers
+
+    private final func setupContext() {
+        context = {{ prefix }}{{ module_info.name }}ViewCellContext(
+            //let loadModelImage: { [weak self] model, completion in
+            //
+            //    guard let sself = self else {
+            //        return .init(result: .success(nil))
+            //   }
+            //
+            //    return sself.output.viewNeedsImage(for: model, completion: completion)
+            //}
+        )
+    }
 
     private final func setupConsumer() {
         consumer.delegate = tableView
