--- a/Code/View/view_controller.root_tableview.cachetracker.swift.liquid
+++ b/Code/View/view_controller.root_tableview.cachetracker.swift.liquid
@@ -16,11 +16,13 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController, {
     // MARK: - Vars
 
     private final let consumer: CacheTrackerPlainConsumer<{{ prefix }}{{ module_info.name }}ModuleEntityModel> = CacheTrackerPlainConsumer<{{ prefix }}{{ module_info.name }}ModuleEntityModel>()
+    private final var context: {{ prefix }}{{ module_info.name }}ViewCellContext!
 
     // MARK: - Life cycle
 
     override func viewDidLoad() {
         super.viewDidLoad()
+        setupContext()
         setupTableView()
         setupConsumer()
         output.viewIsReady()
@@ -55,7 +57,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController, {
     override func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
         let cell = tableView.dequeueReusableCell(withIdentifier: "Default") as! {{ prefix }}{{ module_info.name }}ViewCell
         let model = consumer.object(at: indexPath.row)
-        cell.configure(with: model)
+        cell.configure(with: model, in: context)
         return cell
     }
 
@@ -77,6 +79,19 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController, {
     }
 
     // MARK: - Helpers
+
+    private final func setupContext() {
+        context = {{ prefix }}{{ module_info.name }}ViewCellContext(
+            //let loadModelImage: { [weak self] model, completion in
+            //
+            //    guard let sself = self else {
+            //        return .init(result: .success(nil))
+            //   }
+            //
+            //    return sself.output.viewNeedsImage(for: model, completion: completion)
+            //}
+        )
+    }
 
     private final func setupConsumer() {
         consumer.delegate = self
