--- a/Code/View/view_controller.tableview.cachetracker.cell.swift.liquid
+++ b/Code/View/view_controller.tableview.cachetracker.cell.swift.liquid
@@ -8,11 +8,13 @@ class {{ prefix }}{{ module_info.name }}ViewCell: UITableViewCell {
     // TODO: Place your code here
 
     // MARK: - Vars
-    // TODO: Place your code here
+    
+    private final var context: {{ prefix }}{{ module_info.name }}ViewCellContext?
 
     // MARK: - Public
 
-    func configure(with model: {{ prefix }}{{ module_info.name }}ModuleEntityModel) {
+    func configure(with model: {{ prefix }}{{ module_info.name }}ModuleEntityModel, in context: {{ prefix }}{{ module_info.name }}ViewCellContext) {
+        self.context = context
         // TODO: Place your code here
     }
 
