--- a/Code/View/view_controller.tableview.cachetracker.swift.liquid
+++ b/Code/View/view_controller.tableview.cachetracker.swift.liquid
@@ -17,11 +17,13 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITabl
     // MARK: - Vars
 
     private final let consumer: CacheTrackerPlainConsumer<{{ prefix }}{{ module_info.name }}ModuleEntityModel> = CacheTrackerPlainConsumer<{{ prefix }}{{ module_info.name }}ModuleEntityModel>()
-
+    private final var context: {{ prefix }}{{ module_info.name }}ViewCellContext!
+    
     // MARK: - Life cycle
 
     override func viewDidLoad() {
         super.viewDidLoad()
+        setupContext()
         setupTableView()
         setupConsumer()
         output.viewIsReady()
@@ -78,6 +80,19 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITabl
     }
 
     // MARK: - Helpers
+
+    private final func setupContext() {
+        context = {{ prefix }}{{ module_info.name }}ViewCellContext(
+            //let loadModelImage: { [weak self] model, completion in
+            //
+            //    guard let sself = self else {
+            //        return .init(result: .success(nil))
+            //   }
+            //
+            //    return sself.output.viewNeedsImage(for: model, completion: completion)
+            //}
+        )
+    }
 
     private final func setupConsumer() {
         consumer.delegate = tableView
