--- a/Tests/Presenter/presenter_tests.alert.swift.liquid
+++ b/Tests/Presenter/presenter_tests.alert.swift.liquid
@@ -21,6 +21,7 @@ class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
         {% if custom_parameters.extended_configure %}func configure(with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig) {
         }{% else %}func configure() {
         }{% endif %}
+        func deinitialize() {}
 
     }
 
