--- a/Tests/Presenter/presenter_tests.complex.cachetracker.swift.liquid
+++ b/Tests/Presenter/presenter_tests.complex.cachetracker.swift.liquid
@@ -28,6 +28,8 @@ class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
         }{% else %}func configure() {
         }{% endif %}
 
+        func deinitialize() {}
+
         func isDeliveringModelsListChanges() -> Bool {
             return tracking
         }
