fix context: context issue

--- a/Code/View/view_controller.complex.collectionview.cachetracker.cell.swift.liquid
+++ b/Code/View/view_controller.complex.collectionview.cachetracker.cell.swift.liquid
@@ -14,7 +14,7 @@ class {{ prefix }}{{ module_info.name }}ViewCell: UICollectionViewCell {
 
     // MARK: - Public
 
-    func configure(with model: {{ prefix }}{{ module_info.name }}ModuleEntityModel, in context: context: {{ prefix }}{{ module_info.name }}ViewCellContext) {
+    func configure(with model: {{ prefix }}{{ module_info.name }}ModuleEntityModel, in context: {{ prefix }}{{ module_info.name }}ViewCellContext) {
         self.context = context
         // TODO: Place your code here
     }
