--- a/Code/View/view_controller.complex.collectionview.cachetracker.swift.liquid
+++ b/Code/View/view_controller.complex.collectionview.cachetracker.swift.liquid
@@ -105,10 +105,10 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UIColl
 
     private final func setupContext() {
         context = {{ prefix }}{{ module_info.name }}ViewCellContext(
-            //let loadModelImage: { [weak self] model, completion in
+             //loadModelImage: { [weak self] model, completion in
             //
             //    guard let sself = self else {
-            //        return .init(result: .success(nil))
+            //        return DispatchQueue.main.async { completion(nil) }
             //   }
             //
             //    return sself.output.viewNeedsImage(for: model, completion: completion)
